
Version 0.6.2b
* The mate's reference name is now set to "=" when it matches
the current reads reference name when outputting to the SAM format.
* All characters are ignored after the leading whitespace when reading
in the names of the contigs in the reference FASTA file.  Previously,
whitespaces where converted to '_'.
* Adding for reading .gz and .bz2 files in solid2fastq (C-version).

Version 0.6.2a
* Adding more optional tag fields to SAM output, most notably the 
MD field.  The supported fields are detailed in the bfast book.
* Adding multi-threading to "bfast postprocess"
* Changed qseq2fastq.pl to ill2fastq.pl to support Illumina both
QSEQ and SEQUENCE files.
* Optimized the binary search within the index search; should
be faster.
* Adding in an option to "bfast match" that will load all main
or secondary indexes into memory to avoid storing temporary files.
This is particularly useful on high-memory machines.
* Fixing a bug that did not properly save all constraints. This
reduced performance previously.
* Fixed behaviour differences between when the index(es) are
split and when they are one piece.
* solid2fastq (C-version) now can read in bzip2 compressed
files using the "-j" option.  This is experimental.

Version 0.6.1
* fixing bugs related to the reorganization of the code.

Version 0.6.0
* complete re-organization of the bfast code and commands
* supports automatic splitting of the indexes to allow efficient
low-memory execution (>4GB for the human genome).
* bfast reference and index file names are now based off of the 
input reference FASTA file.
* the match, localalign, and postprocess command support the
pipe-and-filter model (stdin and stdout).
* local alignment now supports a seed-constrained version, which
uses information from the lookups to constrain the local 
alignment.  This adds a speed improvement as well as accuracy 
improvement.

Version 0.5.7
* bfast.submit.pl supports the -s and -e options in BFAST.

Version 0.5.6